--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -112,6 +112,9 @@ header{
         padding: 0;
         a{
             font-size: 1.2em;
+            &:hover{
+              color: $primary-color;
+            }
         }
         .price{
             font-size: 1.5em;
